# ClassDictMeta.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg
ClassDictMeta/: __init__.py
tests/: tests.py
